--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -317,9 +317,9 @@ openshift_logging_es_pvc_storage_class_name="glusterfs-registry-block"
 {% endif %}
 #openshift_logging_image_version=v3.10.45
 
-# Metrics
+# Metrics - Deprecated fron v3.11
 
-openshift_metrics_install_metrics=true
+openshift_metrics_install_metrics=false
 openshift_metrics_cassandra_storage_type=dynamic
 openshift_metrics_hawkular_nodeselector={"node-role.kubernetes.io/infra":"true"}
 openshift_metrics_cassandra_nodeselector={"node-role.kubernetes.io/infra":"true"}
@@ -342,14 +342,5 @@ ansible_service_broker_local_registry_whitelist=['.*-apb$']
 
 # Prometheus
 
-#openshift_hosted_prometheus_deploy=true
-#openshift_prometheus_namespace=openshift-infra
-#openshift_prometheus_node_selector={"node-role.kubernetes.io/infra":"true"}
-#openshift_prometheus_storage_kind=dynamic
-#openshift_prometheus_alertmanager_storage_kind=dynamic
-#openshift_prometheus_alertbuffer_storage_kind=dynamic
-
-# Management
-
-#openshift_management_storage_class=preconfigured
+openshift_cluster_monitoring_operator_install=true
 
