--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -106,6 +106,11 @@ openshift_web_console_inactivity_timeout_minutes=10
 #Add template for new projects
 #osm_project_request_template="default/project-request"
 
+# registry.redhat.io credentials
+oreg_url=registry.redhat.io
+oreg_auth_user=changeme
+oreg_auth_password=changeme
+
 # CRI-O
 
 #openshift_use_crio=true
