--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -355,4 +355,10 @@ openshift_cluster_monitoring_operator_install=true
 
 openshift_console_install=true
 openshift_console_hostname=console.{{ OCP_DEFAULT_SUBDOMAIN }}
+openshift_cluster_monitoring_operator_prometheus_storage_enabled=true
+openshift_cluster_monitoring_operator_alertmanager_storage_enabled=true
+openshift_cluster_monitoring_operator_prometheus_storage_capacity=10Gi
+openshift_cluster_monitoring_operator_alertmanager_storage_capacity=2Gi
+openshift_cluster_monitoring_operator_node_selector=node-role.kubernetes.io/infra=true
+
 
