--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -106,10 +106,11 @@ openshift_web_console_inactivity_timeout_minutes=10
 #Add template for new projects
 #osm_project_request_template="default/project-request"
 
-# registry.redhat.io credentials
+# registry.redhat.io credentials 
+# get credentials from https://access.redhat.com/terms-based-registry
 oreg_url=registry.redhat.io
-oreg_auth_user=changeme
-oreg_auth_password=changeme
+oreg_auth_user=<username>  <-- change this
+oreg_auth_password=<token>  <-- change this
 
 # CRI-O
 
