--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -109,7 +109,7 @@ openshift_web_console_inactivity_timeout_minutes=10
 
 # registry.redhat.io credentials 
 # get credentials from https://access.redhat.com/terms-based-registry
-oreg_url=registry.redhat.io/openshift3/ose-$<component>:$<version>
+oreg_url=registry.redhat.io/openshift3/ose-${component}:${version}
 oreg_auth_user=<username>  <-- change this
 oreg_auth_password=<token>  <-- change this
 
