--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -326,7 +326,7 @@ openshift_logging_es_pvc_storage_class_name="glusterfs-registry-block"
 {% endif %}
 #openshift_logging_image_version=v3.10.45
 
-# Metrics - Deprecated fron v3.11
+# Metrics - Deprecated from v3.11
 
 openshift_metrics_install_metrics=false
 openshift_metrics_cassandra_storage_type=dynamic
