--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -362,6 +362,4 @@ openshift_cluster_monitoring_operator_prometheus_storage_enabled=true
 openshift_cluster_monitoring_operator_alertmanager_storage_enabled=true
 openshift_cluster_monitoring_operator_prometheus_storage_capacity=10Gi
 openshift_cluster_monitoring_operator_alertmanager_storage_capacity=2Gi
-openshift_cluster_monitoring_operator_node_selector=node-role.kubernetes.io/infra=true
-
-
+openshift_cluster_monitoring_operator_node_selector={"node-role.kubernetes.io/infra":"true"}
