--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -167,8 +167,8 @@ openshift_cloudprovider_vsphere_cluster={{ VSPHERE_CLUSTER }}
 openshift_cloudprovider_vsphere_resource_pool={{ VSPHERE_RESOURCE_POOL }}
 openshift_cloudprovider_vsphere_datastore={{ VSPHERE_DATASTORE }}
 openshift_cloudprovider_vsphere_folder={{ VSPHERE_FOLDER }}
-openshift_cloudprovider_vsphere_template={{ VSPHERE_TEMPLATE }}
 #optional
+#openshift_cloudprovider_vsphere_template={{ VSPHERE_TEMPLATE }}
 #openshift_cloudprovider_vsphere_vm_network={{ VSPHERE_VM_NETWORK }}
 #openshift_cloudprovider_vsphere_vm_netmask={{ VSPHERE_VM_NETMASK }}
 #openshift_cloudprovider_vsphere_vm_gateway={{ VSPHERE_VM_GATEWAY }}
